--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "flaviofladon/ecommerce",
     "authors": [
         {
-            "name": "Flavio Santiago",
-            "email": "flaviofladon@gmail.com"
+            "name": "Flavio",
+            "email": "flyerfd@gmail.com"
         }
     ],
     "require": {
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "": "vendor\\hcodebr\\php-classes\\src"
+            "Hcode\\": "vendor\\hcodebr\\php-classes\\src"
         }
     }
 }
